tests/syntax_error/bad_class_field_name.jou
class Foo:
    1: int  # Error: not a valid statement
